# horn

horn/: horn.cabal  stack.yaml
horn/.stack-work/: stack.sqlite3
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/lib/x86_64-osx-ghc-8.8.3/: libHShorn-0.1.0.0-FihwmLDLP5Y2zqYzy7J37n-ghc8.8.3.dylib
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/lib/x86_64-osx-ghc-8.8.3/horn-0.1.0.0-AhuwpgKKA6WF4yPeZ923GP/Horn/Bindings/: Z3.hi
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/lib/x86_64-osx-ghc-8.8.3/horn-0.1.0.0-AhuwpgKKA6WF4yPeZ923GP/Horn/Logic/: Clauses.dyn_hi  Clauses.hi
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/lib/x86_64-osx-ghc-8.8.3/horn-0.1.0.0-FihwmLDLP5Y2zqYzy7J37n/Horn/Bindings/: Z3.dyn_hi  Z3.hi
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/lib/x86_64-osx-ghc-8.8.3/horn-0.1.0.0-FihwmLDLP5Y2zqYzy7J37n/Horn/Logic/: Clauses.dyn_hi  Clauses.hi
horn/.stack-work/install/x86_64-osx/262f561c641e036f399b86f10908f4bfdb9c6bf73240386325fc2e76c709c046/8.8.3/pkgdb/: horn-0.1.0.0-AhuwpgKKA6WF4yPeZ923GP.conf  package.cache
horn/src/: Main.hs
horn/src/Horn/: Monad.hs
horn/src/Horn/Bindings/: Z3.hs
horn/src/Horn/Fixpoint/: Fixpoint.hs
horn/src/Horn/Interpolation/: Farkas.hs
horn/src/Horn/Logic/: Clauses.hs
horn/src/Horn/SymExec/: SymExec.hs
