name:                horn
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/horn#readme
license:             BSD3
license-file:        LICENSE
author:              Klaus v. Gleissenthall
maintainer:          gleissen@ucsd.edu
copyright:           2020 Klaus v. Gleissenthall
category:            Formal Methods
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Horn.Bindings.Z3
    Horn.Logic.Clauses
    Horn.SymExec.SymExec
    Horn.Monad
  hs-source-dirs: ., src
  build-depends:
    base >= 4.7 && < 5, z3, containers, mtl, transformers
  default-language: Haskell2010

executable horn
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, z3, containers, mtl, transformers
